src/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Fredoka+One&family=Homemade+Apple&family=Hurricane&family=Meddon&family=Nabla&family=Righteous&family=Silkscreen&family=Yatra+One&display=swap');


* {
  box-sizing: border-box;
}


body {
  margin: 0;
  padding: 0;
  background-color: #F0ECCF;
}

#formdiv {
  font-family: 'Silkscreen', cursive;
}

#subtitle {
  display: inline-flex;
  font-weight: 600;
  padding-left: 150px;
  font-size: 22px;
}

#listOfIngredients {
  font-family: Hurricane;
  font-size: 30px;
}

#buttonSize {
  font-size: 15px
}

.site-title {
  display: flex;
  margin: 0 auto;
  padding-top: 20px;

}

.navbar {
  display: flex;
  padding: auto auto;
  margin-top: 30px;
  margin-bottom: 30px;
  position: relative;
  justify-content: space-between;
  align-items: center;
  background-color:green;
  color: black;
  border-radius: 23%;
  font-family: Silkscreen;
}

h1 {
  display: inline-flex;
  font-size: 8rem;
  margin: 0 auto;
  font-family: Nabla;
  opacity: 75%;
  border-radius: 20px;
}

@media only screen and (max-width: 800px) {
  h1 {
    font-size:6rem;
  }
}


.g { 
  display: inline-flex;
  align-items: left;
  opacity: 75%;
  animation: flickerG 3s linear 1s reverse ;
}
#g::after {
	content: '';
	width: 150%;
	-webkit-box-shadow: 0px 0px 60px 8px rgb(0, 128, 0);
	-moz-box-shadow: 0px 0px 60px 8px rgb(0, 128, 0);
	box-shadow: -35px 0px 60px 8px rgb(0, 128, 0);
}

@keyframes flickerG {
	0% {
		opacity: 0.5;
	}
  3% {
    opacity: 0
  }
	5% {
		opacity: 0.5;
	}
  7% {
    opacity: 0;
  }
  9% { 
    opacity: 0.7;
  }
	10% {
		opacity: 0.6;
	}
  13% {
    opacity: 0
  }
	15% {
		opacity: 0.85;
	}
  18% {
    opacity: 0
  }
	25% {
		opacity: 0.5;
	}
  27% {
    opacity: 0
  }
	30% {
		opacity: 1;
	}
	35% {
		opacity: 0.1;
	}
	40% {
		opacity: 0.25;
	}
  42% {
    opacity: 0
  }
	45% {
		opacity: 0.5;
	}
	60% {
		opacity: 1;
	}
	70% {
		opacity: 0.85;
	}
	80% {
		opacity: 0.4;
	}
	90% {
		opacity: 0.5;
	}
  95% {
    opacity: 0;
  }
  100%{
    opacity: .75;
  }
	
}

.navlinks {
  height: 100%;
}

.navlinks ul{
  display: flex;
  margin: 0%;
  padding: 0%;
  border-radius: 10%;
}

.navlinks li {
  list-style: none;
}

.navlinks li a {
  display: block;
  text-decoration: none;
  color: black;
  padding: 1rem;
}

.navlinks li:hover {
  background-color: #FFB100;
  border-radius: 20%;
}

.navlinks a.active {
  background-color: #FFB100;
  color: black;
  border-radius: 20%;
}

.menubutton {
  position: absolute;
  top: .75rem;
  right: 1rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 40px;
  height: 21px;
}


.menubutton .bar {
  height: 4px;
  width: 100%;
  background-color: black;
  border-radius: 10px;
}

@media (max-width: 600px) {
  .menubutton {
    display: flex;
  }

  .navlinks {
    display: none;
    width: 100%;
  }

  .navbar {
    flex-direction: column;
    align-items: flex-start;
  }

  .navlinks ul {
    flex-direction: column;
    width: 100%;
  }

  .navlinks ul li {
    text-align: center;
  }

  .navlinks ul li a {
    padding: .5rem 1rem;
  }

  .navlinks.active {
    display: flex;
  }
}

.welcome {
  text-align: center;
  font-family: Silkscreen;
}

#ingredientInput {
  width: 400px;
  height: 40px;
}

.filters {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2rem;
  font-family: Silkscreen;
  font-size: 14px;
}

.menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: Silkscreen;
}

.option {
  width: 225px;
  height: 30px;
}


#addIngredientButton {
  margin: 1rem;
}

#listOfIngredients {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

#listOfIngredients button {
  margin-left: .5rem;
  margin-right: 2rem;
  
}
input.option{
  text-align: center;
}
.option{
  width: 200px;
  height: 25px;
}
#showResponse {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  justify-content: space-between;
  flex-basis: 30%;
}

#showResponse li {
  list-style: none;
  text-align: center;
  margin-bottom: 1rem;
  font-family:Arial, Helvetica, sans-serif;
  font-size: 15px;
  overflow: hidden;
}

.recipeImg {
  cursor: pointer;
  width: 300px;
  /* border: black;
  border-style: solid;
  border-width: 3px; */
}

p {
  text-align: center;
}

.card{
  /* flex: 1 1 21rem; */
  width: 300px;
  margin: 10px 20px;
  background: #fff;
  border: black;
  border-style: solid;
  border-width: 3px;
  /* box-shadow: 0 0 15px black; */
}

.top {
  border: 2px solid black;
  border-radius: 2px;
}
/* .#submitForm button{
  display: flex;
  align-items: center;
} */

.about {
  font-family: Silkscreen;
}

.about-title {
  text-align: right;
}

.about-names {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
  flex-basis: 30%;
}

.about-text {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
  flex-basis: 30%;

}

/* Column design for favorites page */
/* .row {
  display: flex;
}

.column {
  flex: 50%;
} */

#favorites {
  text-align: center;
}

/* Postit Note styling */
#postit {
  line-height: 1;
  text-align: center;
  margin: 25px;
  width: 250px;
  min-height: 250px;
  max-height: 250px;
  padding-top: 35px;
  position: relative;
  border: 1px solid #e8e8e8;
  border-top: 30px solid #fdfd86;
  font-family: 'Reenie Beanie';
  font-size: 22px;
  border-bottom-right-radius: 60px 5px;
  display: inline-block;
  background: #ffff88; /*Old browsers */
  background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right bottom, color-stop(81%,#ffff88), color-stop(82%,#ffff88), color-stop(82%,#ffff88), color-stop(100%,#ffffc6)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* IE10+ */
  background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='ffffc6', GradientType=1 );
} 

#postit:after {
  content: "";
  position:absolute;
  z-index:-1;
  right:-0px; bottom:20px;
  width:200px;
  height: 25px;
  background: rgba(0, 0, 0, 0.2);
  box-shadow:2px 15px 5px rgba(0, 0, 0, 0.40);
  -moz-transform: matrix(-1, -0.1, 0, 1, 0, 0);
  -webkit-transform: matrix(-1, -0.1, 0, 1, 0, 0);
  -o-transform: matrix(-1, -0.1, 0, 1, 0, 0);
  -ms-transform: matrix(-1, -0.1, 0, 1, 0, 0);
  transform: matrix(-1, -0.1, 0, 1, 0, 0);
} 

#shoppingInput {
  text-align: justify;
  position: absolute;
  margin-left: 50%;
}

.rotate {
  background-color: transparent;
  transform: rotate(5deg);
}
/* 
#postit {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: rgb(227, 255, 204);
  box-shadow: 0px 2px 2px 3px #dadada;
  -webkit-transform: rotate(-4deg);
  -o-transform: rotate(-4deg);
  -moz-transform: rotate(-4deg);
  max-width: 240px;
  height: 240px;
  position: relative;
  right: 28%;
  text-align: center;
  margin: center;
  display: center;
}

/* display: flex;
align-items: flex-start;
flex-wrap: wrap;
justify-content: space-between;
flex-basis: 30%; */

